# Thisbitterground

./: .coderabbit.yaml  .gitignore  CONTRIBUTING.md  LICENSE  PERFORMANCE.md  README.md  TEST_RESULTS.md  build.sh
client/: project.godot
client/scenes/: Battlefield.tscn  Main.tscn
client/scripts/: Battlefield.gd  CameraController.gd  DestructibleVisualizer.gd  Main.gd  Minimap.gd  SelectionManager.gd  SimBridge.gd  TerrainVisualizer.gd  UnitVisualizer.gd
gdext/: Cargo.toml  README.md
gdext/src/: lib.rs  sim_bridge.rs
godot/: README.md  project.godot  thisbitterground.gdextension
godot/scenes/: Main.tscn
godot/scripts/: Main.gd
shared/: PROTOCOL.md
sim/: Cargo.toml
sim/examples/: basic_demo.rs
sim/src/: api.rs  components.rs  godot_bridge.rs  lib.rs  profiler.rs  spatial.rs  terrain.rs  world.rs
sim/src/systems/: ai.rs  combat.rs  cover.rs  destruction.rs  mod.rs  morale.rs  movement.rs  performance.rs  serialization.rs  suppression.rs  terrain_damage.rs
