[package]
name = "tbg_sim"
version = "0.1.0"
edition = "2021"
description = "This Bitter Ground - Rust ECS Simulation Core"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]

[features]
default = []
profile = []   # Enable per-system profiling
parallel = ["rayon"]  # Enable internal parallel iteration in heavy systems

[dependencies]
bevy_ecs = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.5"

[[example]]
name = "basic_demo"
path = "examples/basic_demo.rs"
